Adjusts alert box width to fix mobile devices
When the alert box shows up (e.g. when geolocation can't place the
device), the width was too wide on some mobile devices. This commit
reduces the min-width by 100 pixels.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3341,7 +3341,7 @@ body { top: 0px !important; }
   letter-spacing: 1px;
   >div
   {
-    min-width:400px;
+    min-width:300px;
     margin:0 auto;
     position:relative;
     text-align:center;
